Flier 0.5.0

 == API ==
* Added Modification API
* Added Effect API

 == Plugin ==
* Improved error messages
* Added translations
* Added location picking tool (/flier coordinator)
* Added Multiverse to optional dependencies
* Improved lobby control commands (/flier lobby)
* Lobby and game loading now happens after all plugins are enabled
* Fixed problems with too long sidebar lines

 == Gameplay ==
* Added reloading time on the experience bar
* Fixed air weapons usable on the ground
* Disabled health regeneration while in-game
* Compass points to lobby spawn if no players are present
* Added requirements to item buttons
* Players on the ground are flashing constantly

 == Lobby ==
* Moved item buttons from lobby to game
* Added optional permissions for buttons
* Added optional maximum game per lobby limit
* Added arenas to allow concurrent games
* Added automatic lobby joining
* Added automatic game starting

 == Game ==
* Added minimum amount of players required for the game to start
* Added maximum amount of players in game
* Added optional game start delay
* Added optional respawn delay
* Players will wait in the waiting room during these delays
* The game can be locked after starting
* Added optional maximum game time
* Added support for optional rounds in games

 == Content ==
* Added "deathMatch" game
* Added "consume" action
* Added "itemSet" action
* Added "item" activator
* Added "particleGun" attack
* Renamed "machineGun" attack to "projectileGun"
* Added "bomb" action
* Added "leave" action
* Added "ammo" activator
* Replaced "autodestruct" with "suicide"

== Integrations ==
* BountifulAPI will remove title command messages from console
* BountifulAPI will display ammunition on action bar
* BetonQuest will receive some new conditions and objectives
* BetonLangAPI will enable per-player translations of games and items